# profile.common.weston-common

./: Makefile.am  configure.ac  display-manager-run.service  display-manager.path  display-manager.service  project.config  weston-terminal.desktop  weston-user.service  weston-user.sysconfig  weston.ini  weston.sh  weston.sysconfig  weston_tmpfiles.conf
packaging/: weston-common.changes  weston-common.spec  weston-generic.changes  weston-generic.spec
src/: COPYING  Makefile.am  configure.ac  tz-greeter-wl.c  tz-greeter.c  tz-launcher-wl.c  tz-launcher.c  wl-pre.c
src/packaging/: tz-launcher.spec
src/qa-plugin/: Makefile.am  README  qa-client.c  qa-plugin.c  qa.xml
src/tlm/: tlm-dbus-login-gen.c  tlm-dbus-login-gen.h  tlm-dbus-utils.c  tlm-dbus-utils.h
src/toytoolkit/: window.c  window.h
tz-launcher/: Makefile.am  tz-launcher-wl.c  tz-launcher.c  wl-pre.c
tz-launcher/packaging/: tz-launcher.manifest
